--- a/template/index.html
+++ b/template/index.html
@@ -10,6 +10,7 @@
 <script src="http://code.jquery.com/jquery-1.4.min.js" type="text/javascript"></script>
 <script type="text/javascript">
 $(document).ready(function(){
+    $('#content').load('pages/{{startpage.file}}.html');
     {% for entry in navigation %}
     $("#{{entry.file}}").click(function(){
         $('#content').load('pages/{{entry.file}}.html');
