clean up resulting jquery

--- a/template/index.html
+++ b/template/index.html
@@ -8,25 +8,34 @@
 <link rel="shortcut icon" type="image/x-icon" href="img/intern/favicon.ico" />
 <link rel="stylesheet" type="text/css" href="style.css" />
 <script src="http://code.jquery.com/jquery-1.4.min.js" type="text/javascript"></script>
+
 <script type="text/javascript">
+
+function resetNavigation() {
+    // reset navigation button style to default
+    $('#menu-box li').removeClass("li_level_1_selected_no_children");
+    $('#menu-box li').addClass("li_level_1_not_selected");
+    $('#menu-box li a').removeClass("level_1_selected has_no_children");
+    $('#menu-box li a').addClass("level_1_not_selected");
+}
+
+function setNavigation(button) {
+   // set navigation style of pressed button
+    $(button).removeClass("li_level_1_not_selected");
+    $(button).addClass("li_level_1_selected_no_children");
+    $(button + ' > a').removeClass("has_no_children");
+    $(button + ' > a').addClass("level_1_selected has_no_children");
+}
+
 $(document).ready(function(){
     $('#content').load('pages/{{startpage.file}}.html');
     {% for entry in navigation %}
     $("#{{entry.file}}").click(function(){
         // load page content
         $('#content').load('pages/{{entry.file}}.html');
-        
-        // reset navigation button style to default
-        $('#menu-box li').removeClass("li_level_1_selected_no_children");
-        $('#menu-box li').addClass("li_level_1_not_selected");
-        $('#menu-box li a').removeClass("level_1_selected has_no_children");
-        $('#menu-box li a').addClass("level_1_not_selected");
-        // set navigation style of pressed button
-        $('#{{entry.file}}').removeClass("li_level_1_not_selected");
-        $('#{{entry.file}}').addClass("li_level_1_selected_no_children");
-        $('#{{entry.file}} > a').removeClass("has_no_children");
-        $('#{{entry.file}} > a').addClass("level_1_selected has_no_children");
-    });
+        resetNavigation();        
+        setNavigation('#{{entry.file}}');        
+   });
     {% endfor %}
 
 });
