jquery markdown parser, fixes #6

--- a/template/www/pages/start.html
+++ b/template/www/pages/start.html
@@ -1,2 +1,5 @@
-<h1>That`s an example Homepage</h1>
-This is the homepage of {{fullname}}. It is build with python, jinja and jquery.
+<div class="markdown">
+#That`s an example Homepage
+This is the homepage of {{fullname}}.    
+It is build with python, jinja and jquery.
+</div>
