--- a/template/www/index.html
+++ b/template/www/index.html
@@ -9,9 +9,11 @@
 <link rel="stylesheet" type="text/css" href="style.css" />
 <script src="jquery/jquery-1.4.min.js" type="text/javascript"></script>
 <script src="jquery/jquery.ba-hashchange.js" type="text/javascript"></script>
+<script src="https://cdn.rawgit.com/showdownjs/showdown/1.3.0/dist/showdown.min.js" type="text/javascript"></script>
 
 <script type="text/javascript">
 
+var converter = new showdown.Converter();
 var pages = {}
 {% for page in navigation %}
 pages['{{page.file}}']= '{{page.title}}';
@@ -37,10 +39,18 @@ function setNavigation(button) {
 
 function openPage(file) {
     //load content of given file into #content div
-    $('#content').load('pages/' + file + '.html');
-    resetNavigation();
-    setNavigation('#' + file);
-    document.title = pages[file];
+    $('#content').load('pages/' + file + '.html', function(){
+            resetNavigation();
+            setNavigation('#' + file);
+            
+            document.title = pages[file];
+            $(".markdown").each(function() {
+                text = $(this).html();
+                html = converter.makeHtml(text);
+                $(this).html(html);
+            });
+        
+    });
 }
 
 $(document).ready(function(){
