--- a/style.css
+++ b/style.css
@@ -548,11 +548,13 @@ div.text a:link,div.text a:active,div.text a:visited {
 div.text a:hover {
     text-decoration:none;
 }
-div.text ul {
+div.text ul, 
+div.markdown ul {
     margin-left: 2em;
     margin-bottom: 0.5em;
 }
-div.text ul li {
+div.text ul li, 
+div.markdown ul li {
     list-style-image: url(img/greendot.png);
 }
 div.text ol {
@@ -1055,13 +1057,15 @@ table.tabelle2 .themen li {
     padding-left:9px;
 }
 /* Tabelle 3 */
-table.tabelle3 {
+table.tabelle3,
+table.markdown {
     color:#000000;
     line-height:1.3em;
     margin-bottom:10px;
     width:564px;
 }
-table.tabelle3 th {
+table.tabelle3 th,
+table.markdown th {
     background-color:#e5e5e5;
     color:#000000;
     padding:4px 5px 5px;
@@ -1902,13 +1906,15 @@ a#is-current {
 font-weight:700 !important;
 }
 /* Tabelle allgemein */
-.text table {
+.text table,
+.markdown table {
     color:#000000;
     border-color: #b3b3b3;
     margin-bottom:10px;
 /*    width:564px; */
 }
-.text table th {
+.text table th,
+.markdown table th {
     background-color:#e5e5e5;
     border-color: #b3b3b3;
     color:#000000;
@@ -1916,7 +1922,8 @@ font-weight:700 !important;
     text-align:left;
 /*    vertical-align:bottom; */
 }
-.text table td {
+.text table td,
+.markdown table td {
 /*    border-bottom:1px #b3b3b3 solid; */
     border-color: #b3b3b3;
     padding:4px 0 4px 5px;
